--- a/angular-frontend/src/app/modules/landing/landing.component.html
+++ b/angular-frontend/src/app/modules/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen flex flex-col lg:flex-row bg-black text-white">
   <!-- Sección izquierda con logo -->
   <div class="w-full lg:w-1/2 flex items-center justify-center py-10 lg:py-0">
-    <img src="assets/logo-x.svg" alt="Logo Kicknet" class="w-40 h-40 md:w-56 md:h-56 lg:w-72 lg:h-72" />
+    <img src="logo.svg" alt="Logo Kicknet" class="w-40 h-40 md:w-56 md:h-56 lg:w-72 lg:h-72" />
   </div>
 
   <!-- Sección derecha con formulario -->
@@ -39,7 +39,7 @@
       <button (click)="closeModal()" class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-800">x</button>
     </div>
     <div class="flex justify-center mb-4">
-      <img src="assets/logo-x.svg" alt="Logo Kicknet" class="w-10 h-10 md:w-10 md:h-10 lg:w-20 lg:h-20" />
+      <img src="logo.svg" alt="Logo Kicknet" class="w-10 h-10 md:w-10 md:h-10 lg:w-18 lg:h-18" />
     </div>
     <h2 class="text-3xl font-bold mb-8">Iniciar Sesión</h2>
     <form (ngSubmit)="login()" #loginForm="ngForm">
@@ -81,7 +81,7 @@
       <button (click)="closeSignUpModal()" class="absolute text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-800">x</button>
     </div>
     <div class="flex justify-center mb-4">
-      <img src="assets/logo-x.svg" alt="Logo Kicknet" class="w-10 h-10 md:w-10 md:h-10 lg:w-20 lg:h-20" />
+      <img src="logo.svg" alt="Logo Kicknet" class="w-10 h-10 md:w-10 md:h-10 lg:w-18 lg:h-18" />
     </div>
     <h2 class="text-3xl font-bold mb-8">Crear Cuenta</h2>
     <form (ngSubmit)="register()" #registerForm="ngForm">
