--- a/angular-frontend/src/app/modules/home/home.component.html
+++ b/angular-frontend/src/app/modules/home/home.component.html
@@ -2,7 +2,9 @@
   class="min-h-screen flex flex-col lg:flex-row bg-black text-white md:flex-row"
 >
   <!--Sección Izquierda-->
-  <aside class="hidden lg:flex lg:w-3/12 flex flex-col items-center p-6 border-r border-gray-800">
+  <aside
+    class="hidden lg:flex lg:w-3/12 h-screen sticky top-0 flex flex-col items-center p-6 border-r border-gray-800"
+  >
     <!-- Avatar y datos del usuario -->
     <div
       class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-xl mt-3"
@@ -22,24 +24,25 @@
         <p class="text-sm text-gray-400">Seguidores</p>
       </div>
     </div>
-  
+
     <!-- Botón Logout abajo -->
     <div class="mt-auto w-full">
       <button
         (click)="logout()"
-        class="w-full py-3 rounded-full bg-white text-black cursor-pointer hover:bg-white/60 transition-colors mt-4 font-semibold"
+        class="w-full py-3 rounded-full bg-white text-black cursor-pointer hover:bg-white/60 transition-colors font-semibold"
       >
         <i class="fas fa-sign-out-alt text-lg"></i>
         Logout
       </button>
     </div>
   </aside>
-  
 
   <!-- Sección Central: Feed -->
   <main class="w-full lg:w-6/12 border-x border-gray-800">
     <!-- Título "Para ti" arriba -->
-    <h1 class="text-white text-2xl font-semibold border-b-4 border-blue-500 pb-2 px-4 mt-4">
+    <h1
+      class="text-white text-2xl font-semibold border-b-4 border-blue-500 pb-2 px-4 mt-4"
+    >
       Para ti
     </h1>
 
@@ -48,7 +51,9 @@
       <div class="flex items-start px-4">
         <div
           class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-xl mt-3"
-          [ngStyle]="{ 'background-color': getAvatarColor(user?.username || '') }"
+          [ngStyle]="{
+            'background-color': getAvatarColor(user?.username || '')
+          }"
         >
           {{ userInitial }}
         </div>
@@ -63,19 +68,29 @@
       <!-- Barra de herramientas -->
       <div class="flex justify-between items-center px-4 mt-2">
         <div>
-          <label for="imgUpload" class="cursor-pointer text-gray-500 hover:text-gray-300">
+          <label
+            for="imgUpload"
+            class="cursor-pointer text-gray-500 hover:text-gray-300"
+          >
             <i class="fa-regular fa-image text-xl"></i>
-            <input id="imgUpload" type="file" accept="image/*" (change)="onImageSelected($event)" class="hidden" />
+            <input
+              id="imgUpload"
+              type="file"
+              accept="image/*"
+              (change)="onImageSelected($event)"
+              class="hidden"
+            />
           </label>
         </div>
-        <div class="text-sm text-gray-400">
-          {{ characterCount }} / 200
-        </div>
+        <div class="text-sm text-gray-400">{{ characterCount }} / 200</div>
       </div>
 
       <!-- Imagen previa -->
       <div *ngIf="selectedImage" class="p-4">
-        <img [src]="selectedImage"  class="rounded-lg max-h-64 object-cover border border-gray-700" />
+        <img
+          [src]="selectedImage"
+          class="rounded-lg max-h-64 object-cover border border-gray-700"
+        />
       </div>
 
       <button
@@ -87,8 +102,11 @@
     </div>
 
     <!-- Publicaciones -->
-    <div *ngFor="let pub of publications" class="p-4 border-b border-gray-700 relative">
-      <!-- Botón eliminar absolutamente posicionado -->
+    <div
+      *ngFor="let pub of publications"
+      class="p-4 border-b border-gray-700 relative"
+    >
+      <!-- Botón eliminar  -->
       <button
         *ngIf="pub.user_id === userId"
         aria-label="Eliminar publicación"
@@ -97,7 +115,7 @@
       >
         <i class="fas fa-trash-alt cursor-pointer"></i>
       </button>
-
+      <!--info publicacion-->
       <div class="flex items-start">
         <div
           class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-xl"
@@ -120,31 +138,47 @@
             class="rounded-lg mt-3 max-h-[400px] object-contain border border-gray-700"
           />
           <div class="flex items-center gap-5 mt-2 text-gray-400">
-            <i class="fa-regular fa-heart hover:text-red-500 cursor-pointer"></i>
-            <button (click)="oppenCommentModal(pub)" class="hover:text-blue-500 cursor-pointer">
+            <i
+              class="fa-regular fa-heart hover:text-red-500 cursor-pointer"
+            ></i>
+            <!--modal comentarios-->
+            <button
+              (click)="oppenCommentModal(pub)"
+              class="hover:text-blue-500 cursor-pointer"
+            >
               <i class="fa-regular fa-comment"></i
-              ><span class="font-semibold px-2">{{ commentsCountMap[pub.id!] || 0 }}</span>
+              ><span class="font-semibold px-2">{{
+                commentsCountMap[pub.id!] || 0
+              }}</span>
             </button>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Modal Fuera del *ngFor -->
-    <div *ngIf="showCommentModal && selectedPublication" class="fixed inset-0 z-50 flex items-center justify-center">
-      <div class="bg-black text-white rounded-2xl shadow-lg p-6 w-11/12 max-w-lg mx-auto">
+    <div
+      *ngIf="showCommentModal && selectedPublication"
+      class="fixed inset-0 z-50 flex items-center justify-center bg-white/30 backdrop-blur-md"
+    >
+      <div
+        class="bg-black text-white rounded-2xl shadow-lg p-8 w-11/12 max-w-3xl max-h-[90vh] overflow-auto mx-auto relative"
+      >
         <div class="relative mb-6">
           <button
             (click)="closeCommentModal()"
-            class="absolute top-0 right-0 text-gray-400 hover:text-white text-2xl font-bold rounded-full p-1 transition-colors duration-200"
+            class="absolute -right-5 -top-5 text-2xl cursor-pointer font-bold px-2.5 rounded-full transition-colors duration-300 hover:bg-gray-800"
             aria-label="Cerrar modal"
           >
-            ×
+            &times;
           </button>
           <div class="flex items-start">
             <div
               class="w-12 h-12 rounded-full flex items-center justify-center text-white font-bold text-xl"
-              [ngStyle]="{ 'background-color': getAvatarColor(selectedPublication?.username || '') }"
+              [ngStyle]="{
+                'background-color': getAvatarColor(
+                  selectedPublication?.username || ''
+                )
+              }"
             >
               {{ selectedPublication.username.charAt(0).toUpperCase() }}
             </div>
@@ -152,10 +186,16 @@
               <div class="text-sm text-white font-semibold">
                 {{ selectedPublication.username }}
                 <span class="text-gray-500">
-                  {{ selectedPublication.email }} · {{ tiempoTranscurrido(selectedPublication.date) }}
+                  {{ selectedPublication.email }} ·
+                  {{ tiempoTranscurrido(selectedPublication.date) }}
                 </span>
               </div>
               <p class="mt-1">{{ selectedPublication.text }}</p>
+              <img
+              *ngIf="selectedPublication?.image"
+              [src]="selectedPublication.image"
+              class="rounded-lg mt-3 max-h-[260px] object-contain border border-gray-700"
+            />
             </div>
           </div>
         </div>
